--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "class-validator": "^0.12.2",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.0",
     "koa-logger": "^3.1.0",
@@ -34,7 +35,7 @@
   "scripts": {
     "build": "tsc --build",
     "start": "ts-node-dev src/server.ts",
-    "test": "NODE_ENV=test PORT=7788 jest",
+    "test": "NODE_ENV=test PORT=7788 jest --maxWorkers=1",
     "test:watch": "npm run test -- --watchAll"
   },
   "jest": {
