--- a/package.json
+++ b/package.json
@@ -62,7 +62,16 @@
       "jsx",
       "json",
       "node"
-    ]
+    ],
+    "globals": {
+      "ts-jest": {
+        "diagnostics": {
+          "ignoreCodes": [
+            2540
+          ]
+        }
+      }
+    }
   },
   "husky": {
     "hooks": {
